CSS fixes, high contrast done

--- a/src/components/Header/Header.less
+++ b/src/components/Header/Header.less
@@ -43,3 +43,19 @@
     }
   }
 }
+
+.highContrast .c-header {
+  &__tittel {
+    color: white;
+  }
+  &__saksbehandler {
+
+    .c-header__highcontrast-link {
+      color: white;
+    }
+
+    .saksbehandler__navn {
+      color: white;
+    }
+  }
+}
